crates/querygpt-core/tests/snapshots/diff_snapshots__diff_added_filters.snap
---
source: crates/querygpt-core/tests/diff_snapshots.rs
expression: display
---
Changes to ReportSpec:
=====================

~ Modified filters:
  - [0 items]
  + [1 items]
