crates/querygpt-core/tests/snapshots/diff_snapshots__diff_added_select_fields.snap
---
source: crates/querygpt-core/tests/diff_snapshots.rs
expression: display
---
Changes to ReportSpec:
=====================

~ Modified select:
  - [1 items]
  + [2 items]
