crates/querygpt-core/tests/snapshots/diff_snapshots__diff_mode_change.snap
---
source: crates/querygpt-core/tests/diff_snapshots.rs
expression: display
---
Changes to ReportSpec:
=====================

~ Modified mode:
  - "preview"
  + "export"
